package net.proselyte.basepatterns.creational.abstractfactory;

import net.proselyte.basepatterns.creational.abstractfactory.website.WebsiteTeamFactory;

public class AuctionWebsite {
    public static void main(String[] args) {

        System.out.println("Creating website project...");
    }
}
