package net.proselyte.basepatterns.creational.abstractfactory;

import net.proselyte.basepatterns.creational.abstractfactory.banking.BankTeamFactory;

public class SuperBankSystem {
    public static void main(String[] args) {

        System.out.println("Creating banking project...");

    }
}
