package net.proselyte.basepatterns.creational.abstractfactory.website;

import net.proselyte.basepatterns.creational.abstractfactory.Developer;
import net.proselyte.basepatterns.creational.abstractfactory.ProjectManger;
import net.proselyte.basepatterns.creational.abstractfactory.ProjectTeamFactory;
import net.proselyte.basepatterns.creational.abstractfactory.Tester;

public class WebsiteTeamFactory {
}
