@startuml
class net.proselyte.basepatterns.creational.abstractfactory.banking.QATester {
+ void testCode()
}

class net.proselyte.basepatterns.creational.abstractfactory.AuctionWebsite {
+ {static} void main(String[])
}

interface net.proselyte.basepatterns.creational.abstractfactory.Tester {
~ void testCode()
}

class net.proselyte.basepatterns.creational.abstractfactory.website.WebsiteTeamFactory {
+ Developer getFirstDeveloper()
+ Developer getSecondDeveloper()
+ Tester getTester()
+ ProjectManger getProjectManager()
}

interface net.proselyte.basepatterns.creational.abstractfactory.ProjectTeamFactory {
~ Developer getFirstDeveloper()
~ Developer getSecondDeveloper()
~ Tester getTester()
~ ProjectManger getProjectManager()
}

class net.proselyte.basepatterns.creational.abstractfactory.banking.BankTeamFactory {
+ Developer getFirstDeveloper()
+ Developer getSecondDeveloper()
+ Tester getTester()
+ ProjectManger getProjectManager()
}

class net.proselyte.basepatterns.creational.abstractfactory.website.WebsitePM {
+ void manageProject()
}

class net.proselyte.basepatterns.creational.abstractfactory.banking.JavaDeveloper {
+ void writeCode()
}

class net.proselyte.basepatterns.creational.abstractfactory.website.PhpDeveloper {
+ void writeCode()
}

interface net.proselyte.basepatterns.creational.abstractfactory.ProjectManger {
~ void manageProject()
}

class net.proselyte.basepatterns.creational.abstractfactory.website.ManualTester {
+ void testCode()
}

class net.proselyte.basepatterns.creational.abstractfactory.banking.BankingPM {
+ void manageProject()
}

class net.proselyte.basepatterns.creational.abstractfactory.SuperBankSystem {
+ {static} void main(String[])
}

interface net.proselyte.basepatterns.creational.abstractfactory.Developer {
~ void writeCode()
}



net.proselyte.basepatterns.creational.abstractfactory.Tester <|.. net.proselyte.basepatterns.creational.abstractfactory.banking.QATester
net.proselyte.basepatterns.creational.abstractfactory.ProjectTeamFactory <|.. net.proselyte.basepatterns.creational.abstractfactory.website.WebsiteTeamFactory
net.proselyte.basepatterns.creational.abstractfactory.ProjectTeamFactory <|.. net.proselyte.basepatterns.creational.abstractfactory.banking.BankTeamFactory
net.proselyte.basepatterns.creational.abstractfactory.ProjectManger <|.. net.proselyte.basepatterns.creational.abstractfactory.website.WebsitePM
net.proselyte.basepatterns.creational.abstractfactory.Developer <|.. net.proselyte.basepatterns.creational.abstractfactory.banking.JavaDeveloper
net.proselyte.basepatterns.creational.abstractfactory.Developer <|.. net.proselyte.basepatterns.creational.abstractfactory.website.PhpDeveloper
net.proselyte.basepatterns.creational.abstractfactory.Tester <|.. net.proselyte.basepatterns.creational.abstractfactory.website.ManualTester
net.proselyte.basepatterns.creational.abstractfactory.ProjectManger <|.. net.proselyte.basepatterns.creational.abstractfactory.banking.BankingPM
@enduml